// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot — as link 1`] = `
<div>
  <div
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition-all duration-400 px-4 primary text-white bg-blue  border-blue border hover:bg-white hover:border-black  hover:text-black cursor-pointer hover:px-3 flex items-center justify-between w-full"
  >
    <div
      class="flex-1 text-center"
    >
      <a
        href="https://google.com"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Button > matches snapshot — primary 1`] = `
<div>
  <button
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition-all duration-400 px-4 primary text-white bg-blue  border-blue border hover:bg-white hover:border-black  hover:text-black cursor-pointer hover:px-3"
  >
    <div
      class="flex items-center justify-between w-full"
    >
      <div
        class="flex-1 text-center"
      >
        Primary
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > matches snapshot — with icons 1`] = `
<div>
  <button
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition-all duration-400 px-4 primary text-white bg-blue  border-blue border hover:bg-white hover:border-black  hover:text-black cursor-pointer hover:px-3"
  >
    <div
      class="flex items-center justify-between w-full"
    >
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 15.75 7.5-7.5 7.5 7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <div
        class="flex-1 text-center"
      >
        With icons
      </div>
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 15.75 7.5-7.5 7.5 7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </button>
</div>
`;
